@@ -1,11 +1,15 @@
 -----2.10.0 () -----
+	* [worksheet]
+		* Plot templates - allow to save and re-use custom plot configurations
 	* [import]
 		* Import data from Excel .xlsx files using QXlsx library
 		* HDF5: support VLEN data import
+
 Bug fixes:
 	* [spreadsheet] properly paste the data in the format 'yyyy-MM-dd hh:mm:ss' and similar
 	* [xy-curve] fix using custom value label with invalid data points (BUG 455214)
 	* [fit] fix locale usage in evaluation range
+
 -----2.9.0 (03.05.2022) -----
 	* [general]
 		* Allow to copy&paste and to duplicate single objects in the project explorer
